# irs_asset_fifo_calculator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  Makefile  README.md  docker-compose.yaml  mypy.ini  pyproject.toml
.github/workflows/: ci.yaml  codeql.yaml  pages.yaml  python-app.yml
docker/: Dockerfile
docs/: conf.py  demo.cast  fifo_overview.md  index.rst  python_api.rst  requirements.txt
examples/: asset_tx.csv  form8949.csv  form8949_output.csv
scripts/: compare-tutorial-results.sh
src/: calculate_taxes.py
src/irs_asset_fifo_calculator/: __init__.py  calculate_taxes.py
src/tests/: conftest.py  test_calculate_taxes.py
tests/: conftest.py  test_calculate_taxes.py
